Allow platform to control authenticator method
- FIDO2 example originally forces USB authenticator use
- USB key not good for demo though!

--- a/examples/server/server/static/register.html
+++ b/examples/server/server/static/register.html
@@ -49,7 +49,7 @@
     <button onclick="start();">Click here to start</button>
   </div>
   <div id="started", style="display: none;">
-    <p>Touch your authenticator device now...</p>
+    <p>Use your authenticator now...</p>
     <a href="/">Cancel</a>
   </div>
 
